[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/TiaoLetter.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://tests/test_gui_core/TimeGUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="TimeGUI" type="VBoxContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -80.0
margin_right = -10.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeScale" type="VBoxContainer" parent="."]
margin_right = 1004.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="TimeScale"]
margin_right = 1004.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "Time Scale"
align = 1

[node name="Value" type="Label" parent="TimeScale"]
margin_top = 25.0
margin_right = 1004.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "1.0"
align = 1

[node name="Slider" type="HSlider" parent="."]
margin_top = 50.0
margin_right = 1004.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.5
step = 0.05
value = 1.0
tick_count = 15
ticks_on_borders = true

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_top = 70.0
margin_right = 1004.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 10 )
[connection signal="tree_exiting" from="." to="." method="_on_TimeGUI_tree_exiting"]
[connection signal="value_changed" from="Slider" to="." method="_on_Slider_value_changed"]
